@@ -191,23 +191,16 @@ if (ENABLE_CRYPTO_SYSTEM_PROFILE)
    endif ()
 endif ()
 
-if (NOT ENABLE_SASL MATCHES "CYRUS|GSSAPI|SSPI|AUTO|OFF")
+if (NOT ENABLE_SASL MATCHES "CYRUS|SSPI|AUTO|OFF")
    message (FATAL_ERROR
-      "ENABLE_SASL option must be CYRUS, GSSAPI, SSPI, AUTO, or OFF")
+      "ENABLE_SASL option must be CYRUS, SSPI, AUTO, or OFF")
 endif ()
 
 # Defaults.
 set (MONGOC_ENABLE_SASL 0)
 set (MONGOC_ENABLE_SASL_CYRUS 0)
-set (MONGOC_ENABLE_SASL_GSSAPI 0)
 set (MONGOC_ENABLE_SASL_SSPI 0)
 set (MONGOC_HAVE_SASL_CLIENT_DONE 0)
-
-# After CDRIVER-2654, the GSSAPI option will be entirely removed.
-if (ENABLE_SASL STREQUAL "GSSAPI")
-   message (WARNING "ENABLE_SASL=GSSAPI is not supported. Using CYRUS instead.")
-   set (ENABLE_SASL "CYRUS")
-endif()
 
 if (NOT ENABLE_SASL STREQUAL OFF)
    if (ENABLE_SASL MATCHES "AUTO|CYRUS")
@@ -589,15 +582,6 @@ if (MONGOC_ENABLE_SASL)
       set (SOURCES ${SOURCES} ${PROJECT_SOURCE_DIR}/src/mongoc/mongoc-cluster-sspi.c)
       set (SOURCES ${SOURCES} ${PROJECT_SOURCE_DIR}/src/mongoc/mongoc-sspi.c)
       set (SASL_LIBRARIES secur32.lib crypt32.lib Shlwapi.lib)
-   elseif (MONGOC_ENABLE_SASL_GSSAPI)
-      set (SOURCES ${SOURCES} ${PROJECT_SOURCE_DIR}/src/mongoc/mongoc-cluster-gssapi.c)
-      set (SOURCES ${SOURCES} ${PROJECT_SOURCE_DIR}/src/mongoc/mongoc-gssapi.c)
-      if (APPLE)
-         message (STATUS "Compiling against macOS GSS")
-         set (LIBRARIES ${LIBRARIES} -framework GSS)
-      else ()
-         message (FATAL_ERROR "gssapi missing krb5-config support in cmake")
-      endif ()
    endif ()
 else ()
    message (STATUS "SASL disabled")
