@@ -1,42 +1,0 @@
-/*
- * Copyright 2017 MongoDB, Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-#include "mongoc/mongoc-prelude.h"
-
-#ifndef MONGOC_GSSAPI_PRIVATE_H
-#define MONGOC_GSSAPI_PRIVATE_H
-
-#include <bson/bson.h>
-#include "mongoc/mongoc-sasl-private.h"
-
-
-BSON_BEGIN_DECLS
-
-
-typedef struct _mongoc_gssapi_t mongoc_gssapi_t;
-
-
-struct _mongoc_gssapi_t {
-   mongoc_sasl_t credentials;
-   bool done;
-   int step;
-};
-
-
-BSON_END_DECLS
-
-
-#endif /* MONGOC_GSSAPI_PRIVATE_H */
