@@ -15,6 +15,8 @@ Bug fixes:
   * Remove timestamp from uninstall scripts to permit reproducible build.
   * Setting mongoc_ssl_opt_t.pem_file or ca_file to a bad file path caused a
     hang with Darwin SSL.
+  * Fix the ENABLE_SASL cmake option:
+    * Remove unnecessary GSSAPI value. It was equivalent to specifying ENABLE_SASL=CYRUS.
 
 mongo-c-driver 1.13.1
 =====================
